--- a/bithalo/index37cc.html
+++ b/bithalo/index37cc.html
@@ -171,11 +171,11 @@ var settings = {"api_key":"c2aa53944c3f4c22a1a70801f45ad79","picker":"top-left",
 <li id="menu-item-365" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-365"><a href="index0581.html?page_id=326"><span>Get started!</span></a></li>
 <li id="menu-item-366" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-ancestor current-menu-parent menu-item-has-children menu-item-366"><a href="indexe2ab.html?x-portfolio=help-desk"><span>Help Desk</span></a>
 <ul class="sub-menu">
-	<li id="menu-item-147" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-147"><a href="indexbb9f.html?download=568"><span>Documentation</span></a></li>
+	<li id="menu-item-147" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-147"><a href="Documentation.doc"><span>Documentation</span></a></li>
 	<li id="menu-item-580" class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-134 current_page_item menu-item-580"><a href="index37cc.html?page_id=134"><span>FAQ</span></a></li>
 	<li id="menu-item-158" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-158"><a title="Video Tutorials" href="indexdd69.html?x-portfolio=video-tutorials"><span>Video Tutorials</span></a></li>
 	<li id="menu-item-372" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-372"><a href="index4c65.html?page_id=116"><span>Chat</span></a></li>
-	<li id="menu-item-148" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-148"><a title="Download" href="index6b5f.html?download=367"><span>Whitepaper</span></a></li>
+	<li id="menu-item-148" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-148"><a title="Download" href="whitepaper_twosided.pdf"><span>Whitepaper</span></a></li>
 </ul>
 </li>
 <li id="menu-item-661" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-661"><a href="index8f48.html?x-portfolio=in-the-press"><span>News</span></a>
@@ -195,11 +195,11 @@ var settings = {"api_key":"c2aa53944c3f4c22a1a70801f45ad79","picker":"top-left",
 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-365"><a href="index0581.html?page_id=326"><span>Get started!</span></a></li>
 <li class="menu-item menu-item-type-custom menu-item-object-custom current-menu-ancestor current-menu-parent menu-item-has-children menu-item-366"><a href="indexe2ab.html?x-portfolio=help-desk"><span>Help Desk</span></a>
 <ul class="sub-menu">
-	<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-147"><a href="indexbb9f.html?download=568"><span>Documentation</span></a></li>
+	<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-147"><a href="Documentation.doc"><span>Documentation</span></a></li>
 	<li class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-134 current_page_item menu-item-580"><a href="index37cc.html?page_id=134"><span>FAQ</span></a></li>
 	<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-158"><a title="Video Tutorials" href="indexdd69.html?x-portfolio=video-tutorials"><span>Video Tutorials</span></a></li>
 	<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-372"><a href="index4c65.html?page_id=116"><span>Chat</span></a></li>
-	<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-148"><a title="Download" href="index6b5f.html?download=367"><span>Whitepaper</span></a></li>
+	<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-148"><a title="Download" href="whitepaper_twosided.pdf"><span>Whitepaper</span></a></li>
 </ul>
 </li>
 <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-661"><a href="index8f48.html?x-portfolio=in-the-press"><span>News</span></a>
