--- a/bithalo/downloads/BitBayMac.html
+++ b/bithalo/downloads/BitBayMac.html
@@ -1,5 +1,9 @@
 <!DOCTYPE HTML>
 <html lang="en-US">
+    <body>
+        <!-- Note: don't tell people to `click` the link, just tell them that it is a link. -->
+        Your download should begin promptly. If it does not start then you may follow this <a href='https://davtonia.com/bitbay/bitbay.zip'>link to your download</a>.
+    </body>
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="refresh" content="0; url=https://davtonia.com/bitbay/bitbay.zip">
@@ -8,8 +12,4 @@
         </script>
         <title>Page Redirection</title>
     </head>
-    <body>
-        <!-- Note: don't tell people to `click` the link, just tell them that it is a link. -->
-        If you are not redirected automatically, follow this <a href='https://davtonia.com/bitbay/bitbay.zip'>link to your download</a>.
-    </body>
 </html>
