--- a/bithalo/downloads/BitHaloUpdateWin.html
+++ b/bithalo/downloads/BitHaloUpdateWin.html
@@ -2,13 +2,13 @@
 <html lang="en-US">
     <body>
         <!-- Note: don't tell people to `click` the link, just tell them that it is a link. -->
-        Your download should begin promptly. If it does not start then you may follow this <a href='https://davtonia.com/bithalo/bithaloupdatewin.zip'>link to your download</a>.
+        Your download should begin promptly. If it does not start then you may follow this <a href='https://my.pcloud.com/publink/show?code=XZWGOYkZ2Nashd4CqM0odug9mvfRNB8g9VT7'>link to your download</a>.
     </body>
     <head>
         <meta charset="UTF-8">
-        <meta http-equiv="refresh" content="0; url=https://davtonia.com/bithalo/bithaloupdatewin.zip">
+        <meta http-equiv="refresh" content="0; url=https://my.pcloud.com/publink/show?code=XZWGOYkZ2Nashd4CqM0odug9mvfRNB8g9VT7">
         <script type="text/javascript">
-            window.location.href = "https://davtonia.com/bithalo/bithaloupdatewin.zip"
+            window.location.href = "https://my.pcloud.com/publink/show?code=XZWGOYkZ2Nashd4CqM0odug9mvfRNB8g9VT7"
         </script>
         <title>Page Redirection</title>
     </head>
