--- a/bithalo/downloads/BlackHaloLinux.html
+++ b/bithalo/downloads/BlackHaloLinux.html
@@ -2,13 +2,13 @@
 <html lang="en-US">
     <body>
         <!-- Note: don't tell people to `click` the link, just tell them that it is a link. -->
-        Your download should begin promptly. If it does not start then you may follow this <a href='https://davtonia.com/blackhalo/blackhalo.tar.gz'>link to your download</a>.
+        Your download should begin promptly. If it does not start then you may follow this <a href='https://my.pcloud.com/publink/show?code=XZD3OYkZlBjxOx4YRDB5QXFhX6VXBHywoiJ7'>link to your download</a>.
     </body>
     <head>
         <meta charset="UTF-8">
-        <meta http-equiv="refresh" content="0; url=https://davtonia.com/blackhalo/blackhalo.tar.gz">
+        <meta http-equiv="refresh" content="0; url=https://my.pcloud.com/publink/show?code=XZD3OYkZlBjxOx4YRDB5QXFhX6VXBHywoiJ7">
         <script type="text/javascript">
-            window.location.href = "https://davtonia.com/blackhalo/blackhalo.tar.gz"
+            window.location.href = "https://my.pcloud.com/publink/show?code=XZD3OYkZlBjxOx4YRDB5QXFhX6VXBHywoiJ7"
         </script>
         <title>Page Redirection</title>
     </head>
