--- a/bithalo/downloads/BitBayMac.html
+++ b/bithalo/downloads/BitBayMac.html
@@ -2,13 +2,13 @@
 <html lang="en-US">
     <body>
         <!-- Note: don't tell people to `click` the link, just tell them that it is a link. -->
-        Your download should begin promptly. If it does not start then you may follow this <a href='https://davtonia.com/bitbay/bitbay.zip'>link to your download</a>.
+        Your download should begin promptly. If it does not start then you may follow this <a href='https://my.pcloud.com/publink/show?code=XZ4vOYkZRR8FTXsqcukIVkSGBLFivy4TVeOk'>link to your download</a>.
     </body>
     <head>
         <meta charset="UTF-8">
-        <meta http-equiv="refresh" content="0; url=https://davtonia.com/bitbay/bitbay.zip">
+        <meta http-equiv="refresh" content="0; url=https://my.pcloud.com/publink/show?code=XZ4vOYkZRR8FTXsqcukIVkSGBLFivy4TVeOk">
         <script type="text/javascript">
-            window.location.href = "https://davtonia.com/bitbay/bitbay.zip"
+            window.location.href = "https://my.pcloud.com/publink/show?code=XZ4vOYkZRR8FTXsqcukIVkSGBLFivy4TVeOk"
         </script>
         <title>Page Redirection</title>
     </head>
