--- a/bithalo/downloads/BlackHaloWin.html
+++ b/bithalo/downloads/BlackHaloWin.html
@@ -2,13 +2,13 @@
 <html lang="en-US">
     <body>
         <!-- Note: don't tell people to `click` the link, just tell them that it is a link. -->
-        Your download should begin promptly. If it does not start then you may follow this <a href='https://davtonia.com/blackhalo/blackhalowin.zip'>link to your download</a>.
+        Your download should begin promptly. If it does not start then you may follow this <a href='https://my.pcloud.com/publink/show?code=XZIaOYkZ3lJTTgoTbumYjuKn4c8CRfAVg1Ny'>link to your download</a>.
     </body>
     <head>
         <meta charset="UTF-8">
-        <meta http-equiv="refresh" content="0; url=https://davtonia.com/blackhalo/blackhalowin.zip">
+        <meta http-equiv="refresh" content="0; url=https://my.pcloud.com/publink/show?code=XZIaOYkZ3lJTTgoTbumYjuKn4c8CRfAVg1Ny">
         <script type="text/javascript">
-            window.location.href = "https://davtonia.com/blackhalo/blackhalowin.zip"
+            window.location.href = "https://my.pcloud.com/publink/show?code=XZIaOYkZ3lJTTgoTbumYjuKn4c8CRfAVg1Ny"
         </script>
         <title>Page Redirection</title>
     </head>
