--- a/indexdd69.html
+++ b/indexdd69.html
@@ -150,7 +150,7 @@ var settings = {"api_key":"c2aa53944c3f4c22a1a70801f45ad79","picker":"top-left",
   <div class="x-topbar">
     <div class="x-topbar-inner x-container max width">
             <p class="p-info">ACTIVE SINCE - 29th MAY 2014!</p>
-            <div class="x-social-global"><a href="https://www.facebook.com/pages/Night-Trader/278943512285685" class="facebook" title="Facebook" target="_blank"><i class="x-icon-facebook-square"></i></a><a href="https://twitter.com/bithaloofficial" class="twitter" title="Twitter" target="_blank"><i class="x-icon-twitter-square"></i></a></div>    </div>
+            <div class="x-social-global"><a href="https://www.facebook.com/bitbaymarket" class="facebook" title="Facebook" target="_blank"><i class="x-icon-facebook-square"></i></a><a href="https://twitter.com/bitbayofficial" class="twitter" title="Twitter" target="_blank"><i class="x-icon-twitter-square"></i></a></div>    </div>
   </div>
 
     
@@ -372,7 +372,7 @@ var settings = {"api_key":"c2aa53944c3f4c22a1a70801f45ad79","picker":"top-left",
 <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-661"><a href="#">News</a></li>
 <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-656"><a href="#">About</a></li>
 </ul>        
-                  <div class="x-social-global"><a href="https://www.facebook.com/pages/Night-Trader/278943512285685" class="facebook" title="Facebook" target="_blank"><i class="x-icon-facebook-square"></i></a><a href="https://twitter.com/bithaloofficial" class="twitter" title="Twitter" target="_blank"><i class="x-icon-twitter-square"></i></a></div>        
+                  <div class="x-social-global"><a href="https://www.facebook.com/bitbaymarket" class="facebook" title="Facebook" target="_blank"><i class="x-icon-facebook-square"></i></a><a href="https://twitter.com/bitbayofficial" class="twitter" title="Twitter" target="_blank"><i class="x-icon-twitter-square"></i></a></div>        
                   <div class="x-colophon-content">
             <p>Website made by BITCOIN42 <a href="http://bitcoin42.com/" title="Bitcoin42 - your Bitcoin gurus">www.Bitcoin42.com</a>   - Please consider to read our: <a href="index9d10.html?page_id=573" title="Bitcoin42 - your Bitcoin gurus">USE POLICY</a></p>          </div>
         
