--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ var settings = {"api_key":"c2aa53944c3f4c22a1a70801f45ad79","picker":"top-left",
   <div class="x-topbar">
     <div class="x-topbar-inner x-container max width">
             <p class="p-info">ACTIVE SINCE - 29th MAY 2014!</p>
-            <div class="x-social-global"><a href="https://www.facebook.com/pages/Night-Trader/278943512285685" class="facebook" title="Facebook" target="_blank"><i class="x-icon-facebook-square"></i></a><a href="https://twitter.com/bithaloofficial" class="twitter" title="Twitter" target="_blank"><i class="x-icon-twitter-square"></i></a></div>    </div>
+            <div class="x-social-global"><a href="https://www.facebook.com/bitbaymarket" class="facebook" title="Facebook" target="_blank"><i class="x-icon-facebook-square"></i></a><a href="https://twitter.com/bitbayofficial" class="twitter" title="Twitter" target="_blank"><i class="x-icon-twitter-square"></i></a></div>    </div>
   </div>
 
     
@@ -241,7 +241,9 @@ var settings = {"api_key":"c2aa53944c3f4c22a1a70801f45ad79","picker":"top-left",
 <h4  class="h-custom-headline center-text" style="margin-top: 0; color: #fff; text-shadow: 2px 2px 4px #000000"><span><strong>World&#8217;s first unbreakable contracts, no more middlemen, no more lost funds on Exchanges</strong></span></h4>
 <hr  class="x-gap" style="margin: 13px 0 0 0;">
 <h4  class="h-custom-headline center-text" style="margin-top: 0; color: #fff; text-shadow: 2px 2px 4px #000000"><span><strong>No more fear, uncertainty &amp; doubt!</strong></span></h4>
-<p><center><a  class="x-btn x-btn-pill x-btn-large"  href="index0581.html?page_id=326"   data-x-element="extra" data-x-params="{&quot;type&quot;:&quot;popover&quot;,&quot;trigger&quot;:&quot;hover&quot;,&quot;placement&quot;:&quot;bottom&quot;,&quot;title&quot;:&quot;&quot;,&quot;content&quot;:&quot;&quot;}"  data-options="thumbnail: ''"> <i  class="x-icon x-icon-hand-o-right" ></i> Free Multi-Currency Software, available now: get started! <i  class="x-icon x-icon-rocket" ></i></a></center></div></div></div>
+<p><center><a  class="x-btn x-btn-pill x-btn-large"  href="index0581.html?page_id=326"   data-x-element="extra" data-x-params="{&quot;type&quot;:&quot;popover&quot;,&quot;trigger&quot;:&quot;hover&quot;,&quot;placement&quot;:&quot;bottom&quot;,&quot;title&quot;:&quot;&quot;,&quot;content&quot;:&quot;&quot;}"  data-options="thumbnail: ''"> <i  class="x-icon x-icon-hand-o-right" ></i> Free Multi-Currency Software, available now: get started!</a></center><br>
+<center><a  class="x-btn x-btn-pill x-btn-large"  href="https://bithalo.org/Ethalo/"   data-x-element="extra" data-x-params="{&quot;type&quot;:&quot;popover&quot;,&quot;trigger&quot;:&quot;hover&quot;,&quot;placement&quot;:&quot;bottom&quot;,&quot;title&quot;:&quot;&quot;,&quot;content&quot;:&quot;&quot;}"  data-options="thumbnail: ''"> Halo unbreakable contracts now available on Ethereum/Polygon! <i  class="x-icon x-icon-rocket" ></i></a></center>
+</div></div></div>
 
 <div id="x-content-band-2" class="x-content-band vc marginless-columns man" style="background-color: transparent; padding-top: 5px; padding-bottom: 0px;"><div class="x-container max width wpb_row">
 <div  class="x-column x-sm vc x-1-3" style=""  >
@@ -309,7 +311,7 @@ var settings = {"api_key":"c2aa53944c3f4c22a1a70801f45ad79","picker":"top-left",
 
 <div id="x-content-band-6" class="x-content-band vc center-text man" style="background-color: #fdfcf0;"><div class="x-container max width wpb_row">
 <div  class="x-column x-sm vc x-1-1" style=""  >
-<h3  class="h-custom-headline mtn mbs center-text h2 accent" ><span>Upcoming Features</span></h3></div>
+<h3  class="h-custom-headline mtn mbs center-text h2 accent" ><span>More Features</span></h3></div>
 <div  class="x-column x-sm x-1-3" style=""  >
 <h2  class="h-feature-headline h4" ><span><i class="x-icon-check-square-o"></i>Cold Staking</span></h2>
 <p style="text-align: justify;">One of the main gripes with having to stake your coins is that you have to unlock your wallet in order to do so. Using a variation on Two Step Send, you can synchronize computers from separate locations. This makes your wallet able to stake &#8212; while not always remaining online. Allowing for a more secure option to staking &#8212; especially for a large amount of coins.</p>
@@ -320,7 +322,7 @@ var settings = {"api_key":"c2aa53944c3f4c22a1a70801f45ad79","picker":"top-left",
 </div>
 <div  class="x-column x-sm x-1-3 last" style=""  >
 <h2  class="h-feature-headline h4" ><span><i class="x-icon-check-square-o"></i>NightTrader</span></h2>
-<p style="text-align: justify;">The worlds first fully decentralized exchange thanks to the ability to microtrade under the hood of a custom contract. No middle coins, no websites, nobody touches your funds except for you. Centralized exchanges are notoriously known for taking users funds totally disrupting the trust people place in this wonderful technology. Now it's made possible with a custom contract between any two coins using the deposits as insurance.</p>
+<p style="text-align: justify;">The worlds first decentralized exchange NightTrader was a protocol for microtrading using double deposit. Then recently a Bitcoin based decentralized exchange was created by a community member based on the idea of using multisignature threshold keys, signature hashes and debt routing. The brand was transferred from Halo to the developer and community.</p>
 </div>
 <div  class="x-column x-sm x-1-3" style=""  >
 <h2  class="h-feature-headline h4" ><span><i class="x-icon-check-square-o"></i>Python Contracts</span></h2>
@@ -328,7 +330,7 @@ var settings = {"api_key":"c2aa53944c3f4c22a1a70801f45ad79","picker":"top-left",
 </div>
 <div  class="x-column x-sm x-1-3" style=""  >
 <h2  class="h-feature-headline h4" ><span><i class="x-icon-check-square-o"></i>No more volatility</span></h2>
-<p style="text-align: justify;">An upcoming revolutionary change is coming to crypto-currency in the Halo platform. We are working on a currency named BitBay that has the ability to inflate and deflate. Interest rates are controlled by votes and algorithms and thus, users can grow their own coin in a stable fashion ending the era of the infamous &#8220;pump and dump&#8221;. You will be able to sell reserve coins similar to bonds, perform advanced contracts and be your own bank.</p>
+<p style="text-align: justify;">An upcoming revolutionary change is coming to crypto-currency in the Halo platform. A currency was created named BitBay that has the ability to inflate and deflate. Interest rates are controlled by votes and algorithms and thus, users can grow their own coin in a stable fashion ending the era of the infamous &#8220;pump and dump&#8221;. You will be able to sell reserve coins similar to bonds, perform advanced contracts and be your own bank.</p>
 </div>
 <div  class="x-column x-sm x-1-3 last" style=""  >
 <h2  class="h-feature-headline h4" ><span><i class="x-icon-check-square-o"></i>Notary</span></h2>
@@ -337,7 +339,7 @@ var settings = {"api_key":"c2aa53944c3f4c22a1a70801f45ad79","picker":"top-left",
 
 <div id="x-content-band-7" class="x-content-band vc man" style="background-color: #fdfcf0;"><div class="x-container max width wpb_row"></div></div>
 
-<div  class="x-column x-sm vc x-1-2" style=""  ><h2  class="h-custom-headline mtn mbs h4 accent" ><span>Upcoming updates:</span></h2><ul  class="x-ul-icons" >
+<div  class="x-column x-sm vc x-1-2" style=""  ><h2  class="h-custom-headline mtn mbs h4 accent" ><span>Updates:</span></h2><ul  class="x-ul-icons" >
 <li  class="x-li-icon mbm" ><i class=" x-icon-check"></i>Smart Contract Templates! For example &#8220;Find a Job&#8221; and many more!</li>
 <li  class="x-li-icon mbm" ><i class=" x-icon-check"></i>Hedging System to remove volatility.</li>
 <li  class="x-li-icon mbm" ><i class=" x-icon-check"></i>Python Contracts for making your own templates.</li></ul>
@@ -436,7 +438,7 @@ var settings = {"api_key":"c2aa53944c3f4c22a1a70801f45ad79","picker":"top-left",
 <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-661"><a href="#">News</a></li>
 <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-656"><a href="#">About</a></li>
 </ul>        
-                  <div class="x-social-global"><a href="https://www.facebook.com/pages/Night-Trader/278943512285685" class="facebook" title="Facebook" target="_blank"><i class="x-icon-facebook-square"></i></a><a href="https://twitter.com/bithaloofficial" class="twitter" title="Twitter" target="_blank"><i class="x-icon-twitter-square"></i></a></div>        
+                  <div class="x-social-global"><a href="https://www.facebook.com/bitbaymarket" class="facebook" title="Facebook" target="_blank"><i class="x-icon-facebook-square"></i></a><a href="https://twitter.com/bitbayofficial" class="twitter" title="Twitter" target="_blank"><i class="x-icon-twitter-square"></i></a></div>        
                   <div class="x-colophon-content">
             <p>Website made by BITCOIN42 <a href="http://bitcoin42.com/" title="Bitcoin42 - your Bitcoin gurus">www.Bitcoin42.com</a>   - Please consider to read our: <a href="index9d10.html?page_id=573" title="Bitcoin42 - your Bitcoin gurus">USE POLICY</a></p>
             <p><a href="http://www.zimbeck.com/" title="Bitcoin42 - your Bitcoin gurus">Davids personal site</a></p>          </div>
